[package]
name = "jup-dca"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
delay_timer = "0.11"
jup-ag = "0.2.2"
itertools = "0.10"
serde = "1"
serde_json  = "1"
solana-client = "1.10"
solana-sdk = "1.10"
spl-associated-token-account = "1"
spl-token = "3"
tokio = { version = "1", features = ["full"] }
